2021-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* src/libdieharder/bits.c (mybitadd): Correct assignment

2021-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* configure.ac: Ran 'autoupdate; autoreconf --warnings=obsolete'
	* configure: Regenerated

	* src/Makevars.in: Simplified, no longer builds libdieharder

	* src/libdieharder/dab_filltree.c (insert): Use 'static inline'
	* src/libdieharder/dab_filltree2.c (insertBit): Idem

	* src/libdieharder/*: Adapted for R use by converting all stdout
	messaging to Rprintf and REprintf, comment-out exit

2021-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (BugReports): Add to DESCRIPTION

2021-01-15  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'Last Commit' badge

	* .travis.yml: Updated to 'bionic' and R 4.0.*

2019-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.1

	* src/globals.c: New file with global variable defitions

	* src/dieharder.h: Declare global variables 'extern'
	* src/libdieharder/dieharder/libdieharder.h: Ditto
	* src/libdieharder/dieharder/dieharder_rng_types.h: Ditto
	* src/libdieharder/dieharder/dieharder_test_types.h: Ditto
	* src/libdieharder/dieharder/parse.h: Ditto
	* src/libdieharder/dieharder/rgb_operm.h: Ditto
	* src/libdieharder/dieharder/rgb_persist.h: Ditto
	* src/libdieharder/parse.c: Ditto

	* configure.ac: No longer use external libdieharder as it does not
	[yet or maybe ever] support the changes for -fno-common
	* configure: Ditto
	* src/libdieharder/Makefile.in: Minor configure use fix
	* src/libdieharder/Makefile.win: Added for Windows build

	* .travis.yml: No longer install libdieharder-dev

	* src/libdieharder/bits.c: Comment-out unused variable
	* src/libdieharder/chisq.c: Ditto
	* src/libdieharder/dab_dct.c: Ditto